    * FIXES https://bugs.torproject.org/31528
    BridgeDB's UI uses a bunch of obscure "chatspeak" references in its UI.  One
    example is that it responds with "Uh oh, spaghettios!" if there are
    currently no bridges available.  While funny to some, this is difficult to
    translate and shouldn't be part of software that's used by an international
    audience.  This patch removes such references.

    * FIXES https://bugs.torproject.org/12802
    Add a script that sends a bridge request over email, and then checks if it
    received a response from BridgeDB.  We use this script as part of our nagios
    setup, so we notice when our autoresponder breaks.

    * FIXES https://bugs.torproject.org/17548
    This patch removes PGP support.  BridgeDB's signing key expired on
    2015-09-11.  Nobody ever complained and maintaining the bits and pieces
    necessary to sign emails isn't worth the effort, so this patch removes that
    feature.

    * FIXES https://bugs.torproject.org/30941
    Make our email responder more usable.  This patch removes the concept of
    "valid" email commands and returns bridges (obfs4, for now) no matter what
    the user sends.  BridgeDB still supports email commands in case the user
    needs a vanilla or IPv6 bridge.

    * FIXES https://bugs.torproject.org/29686
    Rename files that contain "Bridges" to "bridgerings", to eliminate headache
    on file systems that are case insensitive.

Changes in version 0.10.0 - 2020-04-01

    * FIXES https://bugs.torproject.org/30317
    Update our "howto" box, which explains how one adds bridges to Tor Browser.
    In addition to updating the instructions, this patch also links to
    instructions for Android.

    * FIXES https://bugs.torproject.org/33631
    So far, BridgeDB remembered only the first distribution mechanism it ever
    learned for a given bridge.  That means that if a bridge would change its
    mind and re-configure its distribution mechanism using BridgeDistribution,