@@ -10,6 +10,7 @@ import time
 import hashlib
 from functools import wraps
 from ipaddr import IPAddress
+from contextlib import contextmanager
 import sys
 
 from bridgedb.Stability import BridgeHistory
@@ -338,68 +339,6 @@ def openDatabase(sqlite_file):
         cur.close()
     return conn
 
-
-class DBGeneratorContextManager(object):
-    """Helper for @contextmanager decorator.
-
-    Overload __exit__() so we can call the generator many times
-    """
-
-    def __init__(self, gen):
-      self.gen = gen
-
-    def __enter__(self):
-      return next(self.gen)
-
-    def __exit__(self, type, value, traceback):
-        """Handle exiting a with statement block
-
-        Progress generator or throw exception
-
-        Significantly based on contextlib.py
-
-        :throws: `RuntimeError` if the generator doesn't stop after
-            exception is thrown
-        """
-        if type is None:
-            try:
-                next(self.gen)
-            except StopIteration:
-                return
-            return
-        else:
-            if value is None:
-                # Need to force instantiation so we can reliably
-                # tell if we get the same exception back
-                value = type()
-            try:
-                self.gen.throw(type, value, traceback)
-                raise RuntimeError("generator didn't stop after throw()")
-            except StopIteration as exc:
-                # Suppress the exception *unless* it's the same exception that
-                # was passed to throw().  This prevents a StopIteration
-                # raised inside the "with" statement from being suppressed
-                return exc is not value
-            except:
-                # only re-raise if it's *not* the exception that was
-                # passed to throw(), because __exit__() must not raise
-                # an exception unless __exit__() itself failed.  But throw()
-                # has to raise the exception to signal propagation, so this
-                # fixes the impedance mismatch between the throw() protocol
-                # and the __exit__() protocol.
-                #
-                if sys.exc_info()[1] is not value:
-                    raise
-
-def contextmanager(func):
-    """Decorator to for :func:`Storage.getDB()`
-
-    Define getDB() for use by with statement content manager
-    """
-    @wraps(func)
-    def helper(*args, **kwds):
-        return DBGeneratorContextManager(func(*args, **kwds))
-    return helper
 
 _DB_FNAME = None
 _LOCK = None
